--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/websockets": "^9.3.10",
     "@types/rpi-gpio": "^2.1.1",
     "onoff": "^6.0.3",
+    "pigpio": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.4.0",
     "rpi-gpio": "^2.1.7",
