--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "sonarsocket",
   "private": true,
   "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
+  "description": "Measure distance with HC-SR04 Ultrasonic Sensor and a rasperrypi in NestJS ",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -12,63 +12,29 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "^9.3.10",
     "@nestjs/core": "^9.3.10",
-    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.3.10",
     "@nestjs/platform-socket.io": "^9.3.10",
     "@nestjs/websockets": "^9.3.10",
-    "@types/rpi-gpio": "^2.1.1",
-    "onoff": "^6.0.3",
     "pigpio": "^3.3.1",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^4.4.0",
-    "rpi-gpio": "^2.1.7",
     "rxjs": "^7.8.0",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.3.0",
-    "@nestjs/schematics": "^9.0.4",
-    "@nestjs/testing": "^9.3.10",
-    "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
-    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
-    "source-map-support": "^0.5.21",
-    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
     "typescript": "^5.0.2"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
