--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@nestjs/core": "^9.3.10",
     "@nestjs/platform-express": "^9.3.10",
     "@nestjs/platform-socket.io": "^9.3.10",
+    "@nestjs/schedule": "^2.2.1",
     "@nestjs/websockets": "^9.3.10",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "pigpio": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -27,6 +30,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^9.3.0",
+    "@types/cron": "^2.0.1",
     "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
