--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@nestjs/common": "^9.3.10",
     "@nestjs/core": "^9.3.10",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.3.10",
     "@nestjs/platform-socket.io": "^9.3.10",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/websockets": "^9.3.10",
+    "axios": "^1.3.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "mongoose": "^7.0.3",
     "pigpio": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
