--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongoose": "^7.3.1",
-    "pigpio": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "serialport": "^12.0.0",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
