--- a/package.json
+++ b/package.json
@@ -20,47 +20,48 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^10.0.5",
-    "@nestjs/core": "^10.0.5",
+    "@nestjs/axios": "^3.0.2",
+    "@nestjs/common": "^10.3.7",
+    "@nestjs/core": "^10.3.7",
     "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.5",
-    "@nestjs/platform-socket.io": "^10.0.5",
-    "@nestjs/schedule": "^3.0.1",
-    "@nestjs/websockets": "^10.0.5",
-    "axios": "^1.4.0",
+    "@nestjs/mongoose": "^10.0.4",
+    "@nestjs/platform-express": "^10.3.7",
+    "@nestjs/platform-socket.io": "^10.3.7",
+    "@nestjs/schedule": "^4.0.1",
+    "@nestjs/websockets": "^10.3.7",
+    "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "mongoose": "^7.3.1",
-    "reflect-metadata": "^0.1.13",
+    "class-validator": "^0.14.1",
+    "mongoose": "^8.2.4",
+    "pigpio": "^3.3.1",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "serialport": "^12.0.0",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.1.7",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.5",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.7",
     "@types/cron": "^2.0.1",
-    "@types/express": "^4.17.17",
-    "@types/jest": "29.5.2",
-    "@types/node": "20.3.3",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "29.6.0",
-    "prettier": "^2.8.8",
+    "@types/express": "^4.17.21",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.12.2",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "29.7.0",
+    "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "29.1.1",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "29.1.2",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.3"
   },
   "jest": {
     "moduleFileExtensions": [
